		CHANGES IN FLCore VERSION 3.0

NEW FEATURES

USER-VISIBLE CHANGES
  - model.frame(FLComp) now has an mcf=TRUE argument to correct slots of different dim
  - computeLogLik method added to FLModel. Will return a logLik object calculated with
    the data and params in the object
  - New iterMedians(FLQuant) method to applky median along iter dim
  - coerce method for data.frame to FLPar now assumes a 2D structure with iters as rows
    and params as columns

BUG FIXES
  - iterMeans(FLQuant) was not operating along the 6th dim
	
UTILITIES

DOCUMENTATION
    
DEPRECATED & DEFUNCT